add images and footer

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                 <div class="col-lg-7 mb-3">
                     <div id="mainCarousel" class="carousel slide carousel-fade" data-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li class="active" data-taget="#mainCarousel" data-slid-to="0"></li>
-                            <li class="" data-taget="#mainCarousel" data-slid-to="1"></li>
-                            <li class="" data-taget="#mainCarousel" data-slid-to="2"></li>
-                            <li class="" data-taget="#mainCarousel" data-slid-to="3"></li>
+                            <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mainCarousel" data-slide-to="1"></li>
+                            <li data-target="#mainCarousel" data-slide-to="2"></li>
+                            <li data-target="#mainCarousel" data-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -205,35 +205,65 @@
                 <h5 class="text-primary">#AURORAGROVE</h5>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social1.png" alt="">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social2.png" alt="">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social3.png" alt="">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social4.png" alt="">
                 </div>
             </div>
             <div class="row mt-4">
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social5.png" alt="">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social6.png" alt="">
                 </div>
                 <!-- Hi Ho -->
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social7.png" alt="">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-6 p-3">
                     <img class="img-fluid" src="images/gallery/social8.png" alt="">
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section>
+        <div class="container text-center mt-4">
+            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam molestiae quidem, veritatis facilis
+                    non corrupti ad enim quia quo rem voluptatibus minus quaerat harum consectetur magnam a. Excepturi,
+                    animi adipisci!</p>
+            </blockquote>
+            <footer class="blockquote-footer">Mark Twain</footer>
+        </div>
+    </section>
+
+    <section class="bg-dark">
+        <div class="container text-white text-center py-5">
+            <p class="lead">JOIN OUR NEWS LETTERFOR DEALS AND UPDATES AND OFFERS</p>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+                    <form action="#" class="form-inline">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Your Email">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary">Join Now</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
