scss modification & finished the footer

--- a/index.html
+++ b/index.html
@@ -267,6 +267,29 @@
         </div>
     </section>
 
+    <section id="footer" class="p-3 bg-secondary ">
+        <ul class="nav text-center justify-content-center flex-column flex-sm-row">
+            <li>
+                <a href="" class="nav-link  text-white">FAQ</a>
+            </li>
+            <li>
+                <a href="" class="nav-link  text-white">EXPERIENCE</a>
+            </li>
+            <li>
+                <a href="" class="nav-link text-white">EXPLORE</a>
+            </li>
+            <li>
+                <a href="" class="nav-link text-white">ABOUT</a>
+            </li>
+            <li>
+                <a href="" class="nav-link text-white">CONTACT</a>
+            </li>
+            <li>
+                <a href="" class="nav-link text-white">BOOK NOW</a>
+            </li>
+        </ul>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
