--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <div id="mainNavebar" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="#showcase" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#icons" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Explore</a>
+                    <a href="#explore" class="nav-link">Explore</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#newsLetter" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Book</a>
@@ -49,10 +49,11 @@
             <h3 class="display-5">MODERN CAMPING</h3>
             <h1 class="display-1">AURORA GROVE</h1>
             <p class="lead d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <button id="book" class="btn btn-lg btn-primary px-5">BOOK NOW</button>
+            <button id="book" class="btn btn-lg btn-primary px-5" data-toggle="modal" data-target="#bookingModal">BOOK
+                NOW</button>
         </div>
     </section>
-    <section>
+    <section id="icons">
         <div class="container text-center mt-5">
             <h2>YOU SHOW UP, WE PITCH THE TENT</h2>
             <div class="row">
@@ -78,7 +79,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="explore">
         <div class="container text-center mt-2 p-3">
             <h3>WE'VE CREATED A CAMPING EXPERIENCE THAT'S TURN-KEY AND HASSLE FREE</h3>
             <div class="row m-2">
@@ -145,7 +146,7 @@
                             Recusandae iure consectetur aliquam.
                         </p>
                         <footer class="blockquote-footer">
-                            Deez Nuts
+                            Ted Bundy
                         </footer>
                     </blockquote>
                 </div>
@@ -249,7 +250,7 @@
         </div>
     </section>
 
-    <section class="bg-dark">
+    <section id="newsLetter" class="bg-dark">
         <div class="container text-white text-center py-5">
             <p class="lead">JOIN OUR NEWS LETTERFOR DEALS AND UPDATES AND OFFERS</p>
             <div class="row justify-content-center">
@@ -270,25 +271,77 @@
     <section id="footer" class="p-3 bg-secondary ">
         <ul class="nav text-center justify-content-center flex-column flex-sm-row">
             <li>
-                <a href="" class="nav-link  text-white">FAQ</a>
+                <a href="#" class="nav-link text-white">FAQ</a>
             </li>
             <li>
-                <a href="" class="nav-link  text-white">EXPERIENCE</a>
+                <a href="#" class="nav-link text-white">EXPERIENCE</a>
             </li>
             <li>
-                <a href="" class="nav-link text-white">EXPLORE</a>
+                <a href="#explore" class="nav-link text-white">EXPLORE</a>
             </li>
             <li>
-                <a href="" class="nav-link text-white">ABOUT</a>
+                <a href="#icons" class="nav-link text-white">ABOUT</a>
             </li>
             <li>
-                <a href="" class="nav-link text-white">CONTACT</a>
+                <a href="#newsLetter" class="nav-link text-white">CONTACT</a>
             </li>
             <li>
-                <a href="" class="nav-link text-white">BOOK NOW</a>
+                <a href="#showcase" class="nav-link text-white">BOOK NOW</a>
             </li>
         </ul>
     </section>
+
+    <div class="modal" tabindex="-1" id="bookingModal" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">New Booking</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi odit quos alias voluptatum labore
+                        recusandae.
+                    </p>
+                    <form action="#">
+                        <div class="form-group">
+                            <label for="">Email Address</label>
+                            <input class="form-control" type="email" name="email" id="email"
+                                placeholder="email@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="adults">Number of Adults</label>
+                            <select name="adults" id="adults" class="form-control">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="children">Number of Children</label>
+                            <select name="children" id="children" class="form-control">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="">Additional Requests</label>
+                            <textarea class="form-control" name="requests" id="requests" cols="30" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Submit Requests</button>
+                    <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
