changed name from frozen canyon to snowy grove seems more fitting to the pictures

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
-    <title>Frozen Canyon</title>
+    <title>Snowy Grove</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
         <a href="#" class="navbar-brand">
-            <h3 class="mb-0">Frozen Canyon</h3>
+            <h3 class="mb-0">Snowy Grove</h3>
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNavebar">
             <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
         <div class="" id="overlay"></div>
         <div id="header" class="container text-white text-center">
             <h3 class="display-5">MODERN CAMPING</h3>
-            <h1 class="display-1">FROZEN CANYON</h1>
+            <h1 class="display-1">SNOWY GROVE</h1>
             <p class="lead d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             <button id="book" class="btn btn-lg btn-primary px-5" data-toggle="modal" data-target="#bookingModal">BOOK
                 NOW</button>
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="text-center mt-5">
                 <h3 class="text-center">WHAT OTHERS ARE SAYING</h3>
-                <h5 class="text-primary">#FROZENCANYON</h5>
+                <h5 class="text-primary">#SNOWYGROVE</h5>
             </div>
             <div class="row">
                 <div class="col-md-3 col-6 p-3">
